Updated wrong package name for composer

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name" : "jwebas/debug",
+    "name" : "jwebas/debugger",
     "description" : "Debug",
     "license" : "MIT",
     "type" : "library",
