--- a/composer.json
+++ b/composer.json
@@ -14,17 +14,17 @@
     "require" : {
         "php" : ">=7.1.3",
         "psr/container" : "^1.0",
-        "tracy/tracy" : "^2.5"
+        "tracy/tracy" : "^2.6"
     },
     "require-dev" : {
-        "illuminate/database" : "^5.7",
+        "illuminate/database" : "^5.8",
         "jwebas/config" : "dev-master",
         "slim/slim" : "^3.12",
         "slim/twig-view" : "^2.4"
     },
     "autoload" : {
         "psr-4" : {
-            "Jwb\\" : "src"
+            "Jwebas\\Debugger\\" : "src"
         }
     },
     "config" : {
