--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name" : "jwebas/debugger",
-    "description" : "Slim Framework Tracy Debugger Bar",
+    "description" : "Custom Tracy Debugger Bar",
     "license" : "MIT",
     "type" : "library",
     "minimum-stability" : "dev",
@@ -13,12 +13,14 @@
     ],
     "require" : {
         "php" : ">=7.1.3",
-        "psr/container" : "^1.0",
+        "ext-json" : "*",
+        "ext-session" : "*",
         "tracy/tracy" : "^2.6"
     },
     "require-dev" : {
         "illuminate/database" : "^5.8",
         "jwebas/config" : "dev-master",
+        "psr/container" : "^1.0",
         "slim/slim" : "^3.12",
         "slim/twig-view" : "^2.4"
     },
