--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "jwebas/config" : "dev-master",
         "psr/container" : "^1.0",
         "slim/slim" : "^3.12",
-        "slim/twig-view" : "^2.5"
+        "slim/twig-view" : "^2.5",
+        "symfony/http-foundation": "^4.2"
     },
     "autoload" : {
         "psr-4" : {
