--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,16 @@
         "psr/container" : "^1.0",
         "slim/slim" : "^3.12",
         "slim/twig-view" : "^2.5",
-        "symfony/http-foundation": "^4.2"
+        "symfony/http-foundation" : "^4.2"
     },
     "autoload" : {
         "psr-4" : {
             "Jwebas\\Debugger\\" : "src"
+        }
+    },
+    "autoload-dev" : {
+        "psr-4" : {
+            "Jwebas\\Debugger\\Helpers\\" : "example/src/"
         }
     },
     "config" : {
