--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "psr/container" : "^1.0",
         "slim/slim" : "^3.12",
         "slim/twig-view" : "^2.5",
-        "symfony/http-foundation" : "^4.2"
+        "symfony/http-foundation" : "4.3.x-dev"
     },
     "autoload" : {
         "psr-4" : {
